# tbm_gfs

./: .debug_notebook.ipynb  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: orchestrator.yaml
.github/workflows/: orchestrator.yaml
examples/: 2d-friedel-oscillations.py  compute_and_plot_graphene_gfs.py  compute_and_plot_graphene_ldos.py
src/tbm_gfs/: README.md  constants.py  plotter.py
src/tbm_gfs/bulk_green_functions/: functions.py
src/tbm_gfs/bulk_green_functions/graphene/: config.py  double_integral.py  single_integral.py  stationary_phase_approximation.py
src/tbm_gfs/friedel_oscillations/graphene/: charge_density.py  electronic_energy.py  ldos.py
src/tbm_gfs/green_functions/: functions.py
src/tbm_gfs/green_functions/graphene/: double_integral.py  functions.py  single_integral.py  single_integral_ka.py  stationary_phase_approximation.py
src/tbm_gfs/green_functions/nanotubes/: integral.py
src/tbm_gfs/recursive_methods/: README.md  functions.py
src/tbm_gfs/recursive_methods/matrices/: armchair_nanoribbon.py  (+1 more)
tests/: conftest.py  test_armchair_nanotube_gf_equalities.py  test_graphene_gf_equalities.py  test_graphene_single_integral_gf_symmetries.py  test_zigzag_nanotube_gf_equalities.py
tests/bulk_green_functions/: test_armchair_nanotube_gf_equalities.py  test_functions.py  test_graphene_gf_equalities.py  test_zigzag_nanotube_gf_equalities.py
tests/recursive_methods/: test_recursive_matches_equation_method.py  test_recursive_method_agnr_matrices.py  test_recursive_method_zgnr_matrices.py
(+8 files in other folders)
