[project]
name = "tbm_gfs"
version = "0.0.1"
authors = [
  { name="James Andrew Lawlor"},
]
description = "Lattice Green's Functions for graphene, carbon nanotubes and nanoribbons and their electronic structure computations."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jameslawlor/tbm_gfs"
Issues = "https://github.com/jameslawlor/tbm_gfs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tbm_gfs"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

